fix alignment

--- a/styles/Bluejay Designs.css
+++ b/styles/Bluejay Designs.css
@@ -6,38 +6,46 @@
   font-size: 60px;
 } 
 
+.bar{
+  margin-bottom: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .input-searchbar
 {
-  margin-bottom: 50px;
   font-size: 20px;
   border-radius: 40px; 
   font-family: Quicksand;
   text-indent: 16px;
   font-size: 29px;
+  margin-left: 25px;
 }
 
 .search-container
 {
   text-align: right;
-  margin-right: 295px;
-  display: inline-block;
-  margin-left: 30px;
+  margin-top: 25px;
 }
 
 .Ghibli-Music
 {
   border: 8px solid rgb(189, 72, 72);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-<style>
+
+
 /* Style for the horizontal menu */
 ul.horizontal-menu 
 {
-  margin:0px;
-  padding: 0;
+  padding-left: 0px;
+  padding-top: 25px;
   overflow: hidden; /* Hide overflowing content */
   text-align: center; 
-  display: inline-block;
 }
 
 /* Style for individual menu items */
@@ -51,17 +59,17 @@ ul.horizontal-menu li
   border-color: rgb(36, 70, 79);
   border-width: 2px;
   width: 100px;
+  height: 35px;
   text-align: center;
   font-size: 26px;
+  
 }
 
 /* Style for the menu item links */
 ul.horizontal-menu li a 
 {
-  display: inline-block;
   color: white; /* Text color for the menu items */
   text-align: center;
-  padding: 4px 10px; /* Padding for the menu items */
   text-decoration: none; /* Remove underline from links */
 }
 
@@ -79,7 +87,5 @@ ul.horizontal-menu li a:active
 
 .list
 {
-  margin-left: 258px;
   text-align: center;
 }
-</style>
